prometheus/base/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: promethues-ingress
  namespace: monitoring
spec:
  rules:
  - host: prometheus.prod.koscom.fun
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-k8s
          servicePort: 9090
